--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css.css">
 </head>
 
 <body>
-    <script src="./modul-3.js  "></script>
+    <input type="text" class="text-input" />
+    <p>Text field value: <span class="output"></span></p>
+
+    <!-- script -->
+    <script type="module" src="./DOM.js"></script>
 </body>
 
 </html>
